[package]
name = "wordcount"
version = "0.1.0"
authors = ["glider-gun"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "シンプルな文字、単語、行の出現頻度の計数機能を提供します。"
readme = "README.md"
repository = "https://github.com/glider-gun/wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]

[badges]
appveyor = { repository = "glider-gun/wordcount" }
travis-ci = { repository = "glider-gun/wordcount"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
